fixed: z-index searchbar

--- a/observers/src/app/components/navbar/navbar.component.scss
+++ b/observers/src/app/components/navbar/navbar.component.scss
@@ -17,7 +17,9 @@
       transform: translateX(100%);
     }
   }
-  
+  .z-100 {
+    z-index: 100;
+}
   .animated-line {
     position: relative;
     overflow: hidden;
